// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-1c6bawg-0 gDpeNb"
>
  <h1
    class="profiles__Title-sc-1c6bawg-1 gbQxgd"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-1c6bawg-2 AxUbc"
  >
    <li
      class="profiles__Item-sc-1c6bawg-5 coPBSt"
    >
      <img
        class="profiles__Picture-sc-1c6bawg-4 DDiJz"
        data-testid="profile-picture"
        src="/images/users//images/karl/png.png"
      />
      <p
        class="profiles__Name-sc-1c6bawg-3 hGlXJQ"
      >
        Professor X
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-1c6bawg-0 gDpeNb"
>
  <h1
    class="profiles__Title-sc-1c6bawg-1 gbQxgd"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-1c6bawg-2 AxUbc"
  >
    <li
      class="profiles__Item-sc-1c6bawg-5 coPBSt"
    >
      <img
        class="profiles__Picture-sc-1c6bawg-4 DDiJz"
        data-testid="profile-picture-misc"
        src="/images/users//images/karl/png.png"
      />
      <p
        class="profiles__Name-sc-1c6bawg-3 hGlXJQ"
      >
        Professor X
      </p>
    </li>
  </ul>
</div>
`;
